<?xml version="1.0"?>
<package>
  <name>pumpkin_qt</name>
  <version>0.1.0</version>
  <description>

     pumpkin_qt

  </description>
  <maintainer email="08.paiva@gmail.com">Rafael Paiva</maintainer>
  <author>Rafael Paiva</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>pumpkin_messages</build_depend>
  <run_depend>pumpkin_messages</run_depend>
  <build_depend>pumpkin</build_depend>
  <run_depend>pumpkin</run_depend>
  <build_depend>pumpkin_interface</build_depend>
  <run_depend>pumpkin_interface</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

 
</package>
